# varnish-modules

./: .gitignore  .travis.yml  AUTHORS  CHANGES.rst  COPYING  Makefile.am  Makefile.in  README.rst  aclocal.m4  config.h.in  configure  configure.ac
debian/: README.source  changelog  clean  control  copyright  copyright.auto  docs  rules  watch
debian/patches/: 0001-Use-a-size_t-format-string-for-value-from-strlen.patch  series
debian/tests/: control  test.vcl
debian/tests/spec/varnish-modules/: install_spec.rb  use_spec.rb
docs/: cookie.rst  header.rst  nonstandard-location.rst  saintmode.rst  softpurge.rst  tcp.rst  vsthrottle.rst  xkey.rst
man/: vmod_vsthrottle.man.rst  vmod_vsthrottle.rst
src/: Makefile.am  Makefile.in  vcc_cookie_if.c  vcc_cookie_if.h  vcc_header_if.c  vcc_header_if.h  vcc_saintmode_if.c  vcc_saintmode_if.h  vcc_softpurge_if.c  vcc_softpurge_if.h  vcc_tcp_if.c  vcc_tcp_if.h  vcc_var_if.c  vcc_var_if.h  vcc_vsthrottle_if.c  vcc_vsthrottle_if.h  vcc_xkey_if.c  vcc_xkey_if.h  vmod_cookie.c  vmod_cookie.vcc  vmod_header.c  vmod_header.vcc  vmod_saintmode.c  vmod_saintmode.vcc  vmod_softpurge.c  vmod_softpurge.vcc  vmod_tcp.c  vmod_tcp.vcc  vmod_var.c  vmod_var.vcc  vmod_vsthrottle.c  vmod_vsthrottle.vcc  vmod_xkey.c  vmod_xkey.vcc
src/tests/cookie/: 01-set-delete-produce.vtc  02-clean.vtc  03-null.vtc  04-filter.vtc  05-get.vtc  06-concurrent-query.vtc  07-isset.vtc  08-overflow.vtc  10-parser.vtc  30-format_1123.vtc  r28.vtc
src/tests/header/: append.vtc  copy.vtc  get.vtc  import.vtc  keep-others.vtc  remove.vtc  some-data.vtc  version.vtc
src/tests/saintmode/: test01.vtc  test02.vtc
src/tests/softpurge/: 01-load.vtc  02-simple-hit.vtc  03-simple-miss.vtc  10-softpurge-hit.vtc  11-really-purged.vtc  12-softpurge-variants.vtc  13-softpurge-variants-sickbackend.vtc  14-mind-the-refcounters.vtc
src/tests/tcp/: 01-dumpinfo.vtc  02-congestion.vtc  03-read-tcpinfo.vtc  04-pacing.vtc
src/tests/var/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc
src/tests/vsthrottle/: test01.vtc  test02.vtc
src/tests/xkey/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc
